added logic to add_todo_btn

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -52,5 +52,5 @@
   <% end %>
 </div>
 <p>
-  <input value="+" onclick="unhide()" type="button">
+  <input value="+" onclick="unhide()" type="button" id="+">
 </p>
